add test junit and mock